--- a/2024-2025/Bit/bitfaraggo/bit2.css
+++ b/2024-2025/Bit/bitfaraggo/bit2.css
@@ -1,84 +1,91 @@
-h1
-{
-    text-align: center;
-    color: bisque;
-    font-style: italic;
-    font-size: 100px !important;
-    display: inline-block;
-    margin-left: 75px;
+h1 {
+  text-align: center;
+  color: bisque;
+  font-style: italic;
+  font-size: 100px !important;
+  display: inline-block;
+  margin-left: 75px;
 
 }
-#txt
-{
-    text-align: right;
-    margin-left: 725px;
-    font-size: 120px;
-    color: bisque;
-    display: inline-block;
+
+#txt {
+  text-align: right;
+  margin-left: 725px;
+  font-size: 120px;
+  color: bisque;
+  display: inline-block;
 }
-img
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: 400px;
-    margin-bottom: 50px;
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 400px;
+  margin-bottom: 50px;
 }
-table
-{
-    margin-left: auto;
-    margin-right: auto;
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
-#kep{
-    height: 600px;
+
+#kep {
+  height: 600px;
 }
-body
-{
-    background-image: url(Coding-Wallpaper-Free-Download.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+
+body {
+  background-image: url(Coding-Wallpaper-Free-Download.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-#gomb
-{
-    border-radius: 4px;
-    padding-left: 20px;
-    padding-right: 20px;
+
+#gomb {
+  border-radius: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-#bemutat
-{
-    margin-left: auto;
-    margin-right: auto;
-    color: bisque;
-    text-align: center;
-    font-size: x-large;
-    position: relative;
-    background-color: black;
-    max-width: 70%;
+
+#bemutat {
+  margin-left: auto;
+  margin-right: auto;
+  color: bisque;
+  text-align: center;
+  font-size: x-large;
+  position: relative;
+  background-color: black;
+  max-width: 70%;
 }
+
 .topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color:darkcyan;
-    color: white;
-  }
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: darkcyan;
+  color: white;
+}
+
+#keto {
+  background-color: black;
+  color: bisque;
+}
+
+#kartya {
+  border: 1px solid black;
+}
