--- a/2024-2025/Bit/bitfaraggo/index.css
+++ b/2024-2025/Bit/bitfaraggo/index.css
@@ -1,11 +1,3 @@
-td {
-  border: 1px solid black;
-}
-
-table {
-  width: 500px;
-}
-
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -36,7 +28,30 @@ body {
   background-size: cover;
 }
 
-#main {
-  color: white;
+@keyframes rotation {
+  from {
+    transform-origin: center;
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform-origin: center;
+    transform: rotate(360deg);
+  }
+
 }
 
+p {
+  animation: rotation 0.8s infinite;
+  color: bisque;
+  text-align: center;
+  font-size: 150px;
+  margin: auto;
+  font-style: italic;
+  display: inline-block;
+}
+
+#keret {
+  padding-top: 300px;
+  text-align: center;
+}
