--- a/2024-2025/holegCucc/css/styles.css
+++ b/2024-2025/holegCucc/css/styles.css
@@ -5,7 +5,31 @@ header
     background-size: cover;
     height: 600px;
 }
+
 h1
 {
-    
+    font-family: Cambria, serif;
+    font-size: 5em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 10px 20px;
+    color: turquoise;
+    background-color: rgba(255, 255, 255, 35%)
+}
+h1 div
+{
+    font-size: 2rem;
+    font-style: italic;
+    letter-spacing: normal;
+    text-transform: none;
+}
+@media only screen and (max-width: 768px) 
+{
+    h1{
+        font-size: 3em;
+    }    
+}
+.d-felx
+{
+    align-items: stretch;
 }
